Attempting to fix navbar issues on mobile

--- a/The-Lady-Barber-2.0/styles.css
+++ b/The-Lady-Barber-2.0/styles.css
@@ -34,6 +34,7 @@ a:hover { color: var(--secondary-color); }
     background-color: var(--primary-color); 
     z-index: 100;
     width: 100%;
+    overflow: hidden;
     height: 30vh;
 }
 
